v0.4/_sources/examples/Basic_Usage.rst.txt


.. _sphx_glr_examples_Basic_Usage.py:


===============
THREDDS Catalog
===============

Read a catalog from THREDDS Data Server.

This example grabs a remote catalog and prints out the catalog references
contained within.



.. code-block:: python


    # This is currently a placeholder for a better example
    from __future__ import print_function

    from siphon.catalog import TDSCatalog








.. code-block:: python

    cat = TDSCatalog('http://thredds.ucar.edu/thredds/catalog.xml')
    print(list(cat.catalog_refs.keys()))




.. rst-class:: sphx-glr-script-out

 Out::

    ['Forecast Model Data', 'Forecast Products and Analyses', 'Observation Data', 'Radar Data', 'Satellite Data', 'Unidata case studies']


**Total running time of the script:** ( 0 minutes  0.050 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: Basic_Usage.py <Basic_Usage.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: Basic_Usage.ipynb <Basic_Usage.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
