v0.8/_sources/examples/Basic_Usage.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_Basic_Usage.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_Basic_Usage.py:


===============
THREDDS Catalog
===============

Read a catalog from THREDDS Data Server.

This example grabs a remote catalog and prints out the catalog references
contained within.


.. code-block:: python


    # This is currently a placeholder for a better example
    from __future__ import print_function

    from siphon.catalog import TDSCatalog
    from siphon.http_util import session_manager








.. code-block:: python

    cat = TDSCatalog('http://thredds.ucar.edu/thredds/catalog.xml')
    print(list(cat.catalog_refs))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    ['Forecast Model Data', 'Forecast Products and Analyses', 'Observation Data', 'Radar Data', 'Satellite Data', 'Unidata case studies']


Basic HTTP authentication can also be used by using the HTTP session manager
and setting some default options for HTTP sessions


.. code-block:: python

    session_manager.set_session_options(auth=('username', 'password'))
    cat = TDSCatalog('https://rda.ucar.edu/thredds/catalog.xml')






**Total running time of the script:** ( 0 minutes  0.603 seconds)


.. _sphx_glr_download_examples_Basic_Usage.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: Basic_Usage.py <Basic_Usage.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: Basic_Usage.ipynb <Basic_Usage.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
